fix: fix layout issue

--- a/src/layout/layout.module.css
+++ b/src/layout/layout.module.css
@@ -369,7 +369,6 @@ header {
 .main {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: space-around;
   flex-grow: 1;
   padding-bottom: 10px;
